--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -9,6 +9,7 @@
   justify-content: flex-start;
   align-items: center;
   margin-right: 2rem;
+  margin-left: 4rem;
 }
 
 .gpt3__possibility-image img {
@@ -19,9 +20,11 @@
 .gpt3__possibility-content {
   flex: 1;
   display: flex;
-  flex-direction: column;
+
   justify-content: flex-end;
   align-items: flex-start;
+  flex-direction: column;
+  margin-left: 4rem;
 }
 
 .gpt3__possibility-content h4 {
@@ -48,6 +51,7 @@
   font-size: 16px;
 
   line-height: 30px; /* 187.5% */
+  margin-bottom: 2rem;
 }
 
 @media screen and (max-width: 950px) {
@@ -55,10 +59,12 @@
     flex-direction: column;
   }
   .gpt3__possibility-image {
-    margin: 1rem 0;
+    margin-left: 4rem;
   }
 
   .gpt3__possibility-content {
+    margin-left: 4rem;
+    margin-right: 2rem;
     margin-top: 2rem;
   }
 }
